# coreason-installer

./: .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
coreason_installer/: cli.py  compose_manager.py  diagnostics.py
scratch/: test_compose_profile.py  test_installer_upgrades.py  test_kyc_flow.py  test_web_gui_endpoints.py  test_web_gui_parsing.py
src/: cli.py  compose_manager.py  web_gui.py
src/coreason_installer/: __init__.py  web_gui.py
templates/: Caddyfile  compose.yaml  dex-config.yaml  env.example
