[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason-installer"
dynamic = ["version"]
description = "A zero-dependency bootstrap helper for the CoReason Platform"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "CoReason, Inc.", email = "support@coreason.ai" }
]
license = { text = "Prosperity Public License 3.0.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "canonicaljson>=2.0.0"
]

[project.scripts]
coreason-install = "coreason_installer.cli:main"
coreason-web-gui = "coreason_installer.web_gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_installer"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

